--- a/index.html
+++ b/index.html
@@ -1,10 +1,18 @@
 <html>
 	<head>
-		<link rel="stylesheet" href="slyle.css">
+		<meta charset="UTF-8">
+		<link rel="stylesheet" href="style.css">
 		<script src="javaScript.js"></script>
 		<title>Szybienica</title>
 	</head>
-	
+		
 	<body>
+		<div id="content">
+			<div id="haslo"></div>
+			<div id="szubienica">
+				<img src="img/s0.jpg"/>
+			</div>
+			<div id="litery"></div>
+		</div>
 	</body>
 </html>
